# devhelp

./: meson.build  meson_options.txt
data/: meson.build
docs/reference/: meson.build
docs/reference/xml/: meson.build
misc/gedit-plugin/: meson.build
src/: devhelp.map  meson.build
